# spiritx3-fun

./: CMakeLists.txt  vcpkg.json
fun/: config.hpp
src/: CMakeLists.txt  interpreter.cpp
test/: CMakeLists.txt  eval_expression_test.cpp  parse_expression_test.cpp
